syntax = "proto3";

option csharp_namespace = "GrpcWeatherForecastProtobuf";

package WeatherForecast;

service WeatherForecast {
  rpc Forecasting (WeatherForecastRequest) returns (WeatherForecastResponse);
  rpc ForecastStreaming(WeatherForecastRequest) returns (stream WeatherForecastData);
  rpc ForecastingWithChunkLimit(WeatherForecastRequest) returns (stream WeatherForecastResponse);
}

message WeatherForecastRequest {
	int32 DataLimit = 1;
	int32 ChunkLimit = 2;
}

message WeatherForecastResponse {
	repeated WeatherForecastData WeatherForecastData = 1;
}

message WeatherForecastData {
	string Timestamp = 1;
	string Summary = 2;
	int32 TemperatureC = 3;
	int32 TemperatureF = 4;
}
